Use NIO & Java 8 instead 11 API in InputRC
Signed-off-by: Michael Vorburger <mike@vorburger.ch>